--- a/package.json
+++ b/package.json
@@ -1,1 +1,24 @@
-
+{
+    "name": "restaurantHelper",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server/server.js",
+    "scripts": {
+        "start": "node server/server.js",
+        "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+        "install": "cd server && npm i && cd ../client && npm i",
+        "seed": "cd server && npm run seed",
+        "build": "cd client && npm run build"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "concurrently": "^5.1.0"
+    },
+    "dependencies": {
+        "@mapbox/node-pre-gyp": "^1.0.10",
+        "bcrypt": "^5.0.1",
+        "mongoose": "^6.6.3"
+    }
+}
