--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^3.10.2",
-    "bcrypt": "^4.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "graphql": "^16.6.0",
