--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
