--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "restaurantHelper",
+    "name": "restaurant-helper",
     "version": "1.0.0",
     "description": "",
     "main": "server/server.js",
