--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "apollo-server-express": "^3.10.2",
     "bootstrap": "^5.2.1",
     "graphql": "^16.6.0",
+    "helpers": "^0.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.39.2",
